--- a/src/components/priority-user/banner/style.sass
+++ b/src/components/priority-user/banner/style.sass
@@ -16,11 +16,11 @@
 		width: 100%
 		position: relative
 		a
-			+img-ratio(1080/4096)
+			+img-ratio(552/1440)
 		@media screen and ( max-width: 575.98px )
-			height: auto !important
+			height: 379px !important
 			a
-				+img-ratio(1111/1536)	
+				+img-ratio(379/375)	
 		.info-box-container
 			width: 100%
 			height: 100%
@@ -32,31 +32,11 @@
 				bottom: 0
 			.info-box
 				position: absolute
-				bottom: 50px
+				bottom: 70px
+				width: 100%
 				@media ( max-width: 575.98px )
 					bottom: 0
-				.top-info
-					display: flex
-					font-size: 1rem
-					align-items: center
-					margin-bottom: 20px
-					@media screen and ( max-width: 575.98px )
-						margin-bottom: 10px
-					.category-name
-						background: #FFF9E2
-						border-radius: 21px
-						padding: 8px 16px
-						margin-right: 20px
-						font-weight: bold
-						@media screen and ( max-width: 575.98px )
-							font-size: 10px
-							padding: 4px 8px
-					.date-created
-						color: #FFFFFF
-						font-size: 1.5rem
-						@media screen and ( max-width: 575.98px )
-							font-size: 0.75rem
-				.title
+				.banner-title
 					font-weight: 800
 					font-size: 2rem
 					line-height: 47px
@@ -65,6 +45,14 @@
 						font-size: 1rem
 						line-height: 22px
 						font-weight: 700
+						margin-bottom: 5px
+				.description
+					font-size: 1.25rem
+					line-height: 29px
+					color: #FFFFFF
+					@media screen and ( max-width: 575.98px )
+						font-size: 0.75rem
+						line-height: 18px
 			.swiper-pagination
 				left: auto !important
 				@media ( max-width: 575.98px )
