--- a/src/components/priority-user/content/priority-user.pug
+++ b/src/components/priority-user/content/priority-user.pug
@@ -1,49 +1,103 @@
-section.section.faq-content
+section.section.priority-user-content
     .container-fluid 
-        .faq-search-box
-            .row 
-                .col-12.col-lg-12.col-xl-12
-                    .faq_title
-                        h2.title_big.title_big-black.text-center Câu hỏi thường gặp
-            .row
-                form.group-iput(action="").search-box.text-center
-                    .form-group
-                        input.form-control(type="text" placeholder="Vấn đề bạn đang gặp phải")
-                        button(type="submit")
-                            em.ri-search-2-line
-                    .form-group 
-                        select.form-control(name="") 
-                            option(value="") Sản phẩm tiền gửi
-                            option(value="") Sản phẩm tiền vay
-        .faq-main-content-box
-            .row
-                .main-content
-                    ul.list-questions 
-                        li.item-question
-                            .title-question-box
-                                img(src="./images/faq/Question.png")
-                                span.title-question Khách hàng có thể mở tài khoản thanh toán với những loại tiền gì tại HDBank?
-                                span.btn-arrow
-                            .content-answer-box 
-                                p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
-                        li.item-question
-                            .title-question-box
-                                img(src="./images/faq/Question.png")
-                                span.title-question Người khiếm thị không biết đọc, biết viết mở và sử dụng TK TGTT tại HDBank như thế nào?
-                                span.btn-arrow
-                            .content-answer-box 
-                                p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
-                        li.item-question
-                            .title-question-box
-                                img(src="./images/faq/Question.png")
-                                span.title-question Khách hàng có nhu cầu ủy quyền Tài khoản thanh toán cho người khác thì có được hay không?
-                                span.btn-arrow
-                            .content-answer-box 
-                                p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
-                        li.item-question
-                            .title-question-box
-                                img(src="./images/faq/Question.png")
-                                span.title-question Khách hàng có nhu cầu ủy quyền Tài khoản thanh toán cho người khác thì có được hay không?
-                                span.btn-arrow
-                            .content-answer-box 
-                                p Với một thiết bị (máy vi tính để bàn, máy vi tính xách tay, máy vi tính bảng, điện thoại) kết nối mạng Internet, quý khách có thể kết nối với Ngân hàng trực tuyến HDBank và truy cập vào tài khoản của quý khách.
+        .swiper-card-promotion-box
+            h2.title.title_small.title-box Khách hàng ưu tiên
+            .swiper-card-promotion
+                .swiper-container
+                    .swiper-wrapper 
+                        .swiper-slide 
+                            .item-card.active
+                                .img-card 
+                                    a(href="") 
+                                        img(src="./images/priority-user/card/icon.png", alt="")
+                                .title-card 
+                                    a.title(href="") Điều kiện tham gia
+                        .swiper-slide 
+                            .item-card
+                                .img-card 
+                                    a(href="") 
+                                        img(src="./images/priority-user/card/icon-1.png", alt="")
+                                .title-card 
+                                    a.title(href="") Đặc quyền doanh nghiệp
+                        .swiper-slide 
+                            .item-card
+                                .img-card 
+                                    a(href="") 
+                                        img(src="./images/priority-user/card/icon-2.png", alt="")
+                                .title-card 
+                                    a.title(href="") Ưu đãi doanh nghiệp
+                        .swiper-slide 
+                            .item-card
+                                .img-card 
+                                    a(href="") 
+                                        img(src="./images/priority-user/card/icon-3.png", alt="")
+                                .title-card 
+                                    a.title(href="") Ưu đãi ban lãnh đạo
+                .swiper-button-next 
+                    img(src="./images/priority-user/button/arrownext.png", alt="")
+                .swiper-button-prev
+                    img(src="./images/priority-user/button/arrowprev.png", alt="")
+        .info-box
+            p.info-paragraph Nhằm mục đích tri ân và cảm ơn Quý Doanh nghiệp đã đồng hành cùng chúng tôi trong quá trình phát triển HDBank, chúng tôi trân trọng giới thiệu đến Quý Doanh nghiệp Chương trình Khách hàng Doanh nghiệp VIP với các đặc quyền nổi trội:
+            ul.list-highlight
+                li.item-highlight 
+                    img.icon-check(src="./images/priority-user/Bullet.png")
+                    span Đội ngũ tư vấn chuyên biệt
+                li.item-highlight 
+                    img.icon-check(src="./images/priority-user/Bullet.png")
+                    span Ưu tiên phục vụ, thực hiện giao dịch
+                li.item-highlight 
+                    img.icon-check(src="./images/priority-user/Bullet.png")
+                    span HOTLINE riêng cho KH VIP 24/7 - 
+                    span.text-highlight 18006060
+        .customers-box 
+            ul.list-customers 
+                li.item-customer.active
+                    .row
+                        .left-box.col-12.col-lg-4.col-xl-4
+                            a.link-info(href="")
+                                img(src="./images/priority-user/image 150.png")
+                                .name Khách hàng FDI
+                                    .arrow
+                        .right-box.col-12.col-lg-8.col-xl-8
+                            .info-box
+                                p.name Khách hàng FDI
+                                .description
+                                    p Mảng khách hàng doanh nghiệp có vốn đầu tư trực tiếp nước ngoài (FDI) được HDBank xác định là một trong những phần trọng tâm để thúc đẩy hoạt động kinh doanh.
+                                    p Hiện nay, phòng FDI thuộc khối KHDN HDBank đã đang triển khai nhiều sản phẩm, dịch vụ tài chính có xu hướng tập trung mạnh vào những ngành công nghiệp tiềm năng đang được nhà nước khuyến khích. Đến nay, HDBank là ngân hàng chiến lược đối với hầu hết các doanh nghiệp vừa và nhỏ có vốn đầu tư nước ngoài tại các KCN, KCX… đang hoạt động trên lãnh thổ Việt Nam.
+                                    p Ban lãnh đạo HDBank đã sớm đánh giá tiềm năng từ khách hàng FDI nên đã xây dựng đội ngũ gồm các nhân sự thông thạo khả năng Tiếng Anh, Tiếng Nhật, Tiếng Hoa, Tiếng Hàn…. để có thể khai thác khách hàng một cách toàn diện của mọi quốc gia.
+                li.item-customer 
+                    .row
+                        .left-box.col-12.col-lg-4.col-xl-4.col-xs-12
+                            a.link-info(href="")
+                                img(src="./images/priority-user/image 148.png")
+                                .name Bàn Nhật
+                                    .arrow
+                        .right-box.col-12.col-lg-8.col-xl-8.col-xs-12
+                            .info-box
+                                p.name Bàn Nhật
+                                .description
+                                    p Với định hướng cung cấp những dịch vụ tài chính toàn diện hướng đến đối tượng khách hàng là các doanh nghiệp Nhật Bản đang hoạt động tại Việt Nam, tính đến nay HDBank đã hợp tác với 8 ngân hàng và các tập đoàn tài chính của Nhật, bộ phận Nhật Bản tại HDBank đã không ngừng hoàn thiện và cải tiến về chất lượng dịch vụ, góp phần xây dựng được hình ảnh HDBank uy tín, tiềm lực tài chính vững mạnh, danh mục sản phẩm đa dạng, tiện ích trong cộng đồng các doanh nghiệp Nhật Bản.
+                                    p Hiện nay, bàn Nhật HDBank đang có những ưu đãi và dịch vụ dành cho khách hàng Nhật Bản như bên dưới:
+                                    ul 
+                                        li Tặng ví điện tử 10 triệu đồng cho khách hàng doanh nghiệp Nhật mới
+                                        li Đồng hành cùng doanh nghiệp, cá nhân Nhật Bản
+                                        li Tài trợ vốn lưu động, tài trợ đầu tư tài sản cố định
+                                        li Tiền gửi tiết kiệm
+                                        li Dịch vụ thu hộ, dịch vụ chi lương...
+                                        li Các dịch vụ tiện ích ( Ngân hàng điện tử, thẻ, thu đổi ngoại tệ...)
+                li.item-customer 
+                    .row
+                        .left-box.col-12.col-lg-4.col-xl-4.col-xs-12
+                            a.link-info(href="")
+                                img(src="./images/priority-user/image 149.png")
+                                .name Bàn Đài Loan
+                                    .arrow
+                        .right-box.col-12.col-lg-8.col-xl-8.col-xs-12
+                            .info-box
+                                p.name Bàn Đài Loan
+                                .description
+                                    p Mảng khách hàng doanh nghiệp có vốn đầu tư trực tiếp nước ngoài (FDI) được HDBank xác định là một trong những phần trọng tâm để thúc đẩy hoạt động kinh doanh.
+                                    p Hiện nay, phòng FDI thuộc khối KHDN HDBank đã đang triển khai nhiều sản phẩm, dịch vụ tài chính có xu hướng tập trung mạnh vào những ngành công nghiệp tiềm năng đang được nhà nước khuyến khích. Đến nay, HDBank là ngân hàng chiến lược đối với hầu hết các doanh nghiệp vừa và nhỏ có vốn đầu tư nước ngoài tại các KCN, KCX… đang hoạt động trên lãnh thổ Việt Nam.
+                                    p Ban lãnh đạo HDBank đã sớm đánh giá tiềm năng từ khách hàng FDI nên đã xây dựng đội ngũ gồm các nhân sự thông thạo khả năng Tiếng Anh, Tiếng Nhật, Tiếng Hoa, Tiếng Hàn…. để có thể khai thác khách hàng một cách toàn diện của mọi quốc gia.
+
