--- a/src/components/priority-user/content/style.sass
+++ b/src/components/priority-user/content/style.sass
@@ -1,127 +1,201 @@
-.faq-content
-    width: 70%
-    margin: -50px auto 80px
-    margin-top: -50px
-    position: relative
-    background: #FFFFFF
-    box-shadow: 0px 14px 40px rgba(33, 43, 54, 0.1)
-    border-radius: 20px
-    @media screen and ( max-width: 1024px ) 
-        width: 80%
-    @media screen and ( max-width: 575.98px )
-        width: 90%
-        box-shadow: none
-        margin: -30px auto 20px;
-    .container-fluid
-        @media screen and ( max-width: 575.98px ) 
-            padding: 0
-        .faq-search-box
-            @media screen and ( max-width: 575.98px ) 
-                box-shadow: 0 14px 40px rgba(33, 43, 54, 0.1)
-                border-radius: 20px
-                padding: 0 15px
-                margin-bottom: 20px
-            .faq_title
-                margin: 64px 0 40px
-                @media screen and ( max-width: 575.98px ) 
-                    margin: 30px 0 20px
-            .group-iput.search-box
-                margin-bottom: 32px
-                display: flex
-                flex-direction: column
-                align-items: center
-                @media screen and ( max-width: 575.98px ) 
-                    margin-bottom: 10px
-                .form-group
-                    position: relative
-                    margin-left: 8px
-                    margin-bottom: 20px
-                    width: 60%
-                    @media screen and ( max-width: 575.98px ) 
-                        width: 100%
-                    &:first-child
-                        margin-left: 0
-                    .form-control
-                        padding: 12px 16px
-                        width: 100%
-                        height: 48px
-                        border-radius: 50px
-                        border: 0
-                        background: #F9FAFC;
-                        &:hover
-                            box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.15);
-                    select.form-control
-                        padding-left: 40px
-                        -webkit-appearance: none
-                        -moz-appearance: none
-                        -ms-appearance: none
-                        appearance: none
-                        position: relative
-                        background-image: url('../images/icons/select.png')
-                        background-repeat: no-repeat
-                        background-position: 14px
-                        border: none
-                        &:focus
-                            outline: none
-                            box-shadow: none
-                    button
-                        position: absolute
-                        top: 50%
-                        right: 10px
-                        transform: translateY(-50%)
-                        background: $tran
-        .main-content
-            .list-questions
-                padding: 0 3rem
-                @media screen and ( max-width: 575.98px ) 
-                    padding: 0
-                .item-question
-                    border-top: 1px solid #BCC0CC;
-                    &:first-child
-                        border-top: none
-                    .title-question-box
-                        cursor: pointer
-                        position: relative
-                        display: flex
-                        justify-content: flex-start
-                        align-items: center
-                        padding: 20px 50px 10px 0px
-                        margin-bottom: 15px
-                        @media screen and ( max-width: 575.98px ) 
-                            padding: 10px 50px 10px 0px
+.priority-user-content
+    max-width: 1024px
+    margin: 0 auto
+    .swiper-card-promotion-box
+        .title-box
+            display: none
+            @media ( max-width: 575.98px )
+                display: block
+                padding: 40px 0 !important
+        .swiper-card-promotion
+            position: relative
+            text-align: center
+            margin-top: 50px
+            @media ( max-width: 575.98px )
+                margin: 0 auto
+                width: 80%
+            .item-card
+                .img-card
+                    a 
                         img
-                            @media screen and ( max-width: 575.98px ) 
-                                width: 20px
-                        .title-question 
-                            font-weight: bold
-                            font-size: 20px
-                            line-height: 29px
-                            color: #333333
-                            margin-left: 10px
-                            @media screen and ( max-width: 575.98px ) 
-                                font-size: 14px
-                        .btn-arrow
-                            background: url("../images/faq/Arrow-Down.png")
-                            background-size: cover
-                            width: 32px
-                            height: 32px
+                            @media ( max-width: 575.98px )
+                                width: 60px
+                                height: 60px
+
+                .title-card 
+                    margin-top: 10px
+                    font-size: 1.375rem
+                    line-height: 32px
+                    color: #333333
+                    @media ( max-width: 575.98px )
+                        line-height: 14px
+                    .title 
+                        color: inherit
+                        @media ( max-width: 575.98px )
+                            font-size: 0.75rem
+                &.active
+                    font-weight: bold
+            .swiper-button-next
+                display: none
+                // background: url(../../../images/priority-user/button/arrownext.png) !important
+                right: -40px !important
+                // width: 24px !important
+                // height: 24px !important
+                @media ( max-width: 575.98px )
+                    display: block
+            .swiper-button-prev
+                display: none
+                // background: url(../../../images/priority-user/button/arrowprev.png) !important
+                left: -40px !important
+                // width: 24px !important
+                // height: 24px !important
+                @media ( max-width: 575.98px )
+                    display: block
+            .swiper-button-prev::before
+                display: none
+            .swiper-button-next::before
+                display: none
+    .info-box
+        margin-top: 30px
+        .info-paragraph
+            font-size: 1.75rem
+            line-height: 41px;
+            text-align: center
+            @media screen and ( max-width: 575.98px )
+                text-align: left
+                font-size: 0.875rem
+                line-height: 24px
+        .list-highlight 
+            text-align: center
+            @media screen and ( max-width: 575.98px )
+                padding: 0
+                text-align: left
+            .item-highlight 
+                font-size: 1.5rem
+                line-height: 35px
+                font-weight: 600
+                @media screen and ( max-width: 575.98px )
+                    display: flex
+                    align-items: center
+                .icon-check
+                    display: none
+                    margin-right: 7px
+                    @media screen and ( max-width: 575.98px )
+                        display: block
+                .text-highlight
+                    color: red
+                @media screen and ( max-width: 575.98px )
+                    font-size: 0.875rem
+                    line-height: 24px
+    .customers-box
+        margin-top: 60px
+        .list-customers
+            padding: 40px
+            box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.12)
+            border-radius: 20px
+            position: relative
+            min-height: 630px
+            @media screen and ( max-width: 575.98px )
+                padding: 0 !important
+                box-shadow: none !important
+            .item-customer
+                margin-bottom: 20px
+                .left-box
+                    height: 150px
+                    @media screen and ( max-width: 575.98px )
+                        height: 106px
+                    a 
+                        height: 100%
+                        width: 100%
+                        @media screen and ( max-width: 575.98px )
+                            padding: 0
+                        +img-ratio(211/686)
+                        img
+                            background: linear-gradient(360deg, #000000 -3.93%, rgba(0, 0, 0, 0) 39.15%), url(.png)
+                            filter: drop-shadow(0px 4px 24px rgba(0, 0, 0, 0.12))
+                            border-radius: 12px
+                            // @media screen and ( max-width: 575.98px )
+                            //     height: auto
+                        .name
+                            color: white
                             position: absolute
-                            right: 5px
-                            @media screen and ( max-width: 575.98px ) 
+                            bottom: 15px
+                            left: 15px
+                            font-size: 24px
+                            line-height: 35px
+                            display: flex
+                            align-items: center
+                            @media screen and ( max-width: 575.98px )
+                                font-size: 1rem
+                                line-height: 23px !important
+                            .arrow
+                                background: url(../../../images/priority-user/Arrow-Right.png)
                                 width: 20px
                                 height: 20px
-                    .content-answer-box
+                                margin-top: 3px
+                                margin-left: 6px
+                                @media screen and ( max-width: 575.98px )
+                                    transform: rotate(-90deg)
+                                    margin: 6px 0 0 10px
+                .right-box
+                    position: absolute
+                    padding-left: 30px
+                    top: 30px
+                    right: 0
+                    padding-right: 30px
+                    max-height: 560px;
+                    overflow-x: auto;
+                    @media screen and ( max-width: 575.98px )
+                        padding-left: calc(var(--bs-gutter-x)*0.5) !important;
+                        position: relative !important
+                        padding-right: calc(var(--bs-gutter-x)*0.5) !important;
+                        // margin-top: -30px;
+                        // margin-bottom: 30px;
+                        top: 0
+                        overflow-x: unset
+                        max-height: unset
+                    .info-box
+                        margin-top: 0
+                        // position: absolute
                         display: none
-                        padding-right: 50px
-                        @media screen and ( max-width: 575.98px ) 
-                            font-size: 14px
-                            padding: 0 10px
-                .item-question.active
-                    .title-question-box
-                        .title-question
-                            color: #F00020
-                        .btn-arrow
-                            background: url("../images/faq/Arrow-Up.png")
-                            background-size: cover
-                    .content-answer-box
-                        display: block
+                        @media screen and ( max-width: 575.98px )
+                            position: relative !important
+                            box-shadow: 0 4px 24px rgba(0, 0, 0, 0.12)
+                            border-radius: 20px
+                            padding: 16px
+                            margin-top: 10px !important
+                        .name
+                            font-weight: bold
+                            font-size: 2rem
+                            line-height: 47px
+                            @media screen and ( max-width: 575.98px )
+                                display: none
+                        .description
+                            font-size: 1.25rem
+                            line-height: 29px
+                            @media screen and ( max-width: 575.98px )
+                                font-size: 0.75rem
+                                line-height: 18px
+                            ul
+                                li 
+                                    list-style: initial
+                &.active
+                    .left-box
+                        @media screen and ( max-width: 575.98px )
+                            height: 45px
+                        a 
+                            img
+                                @media screen and ( max-width: 575.98px )
+                                    height: 45px !important
+                            .name
+                                @media screen and ( max-width: 575.98px )
+                                    top: 0
+                                    height: 100%
+                                .arrow
+                                    @media screen and ( max-width: 575.98px )
+                                        transform: rotate(90deg);
+                                        margin: 0 0 0 10px;
+                    .right-box
+                        .info-box
+                            display: block
+                            
