--- a/src/components/contact/form2/style.sass
+++ b/src/components/contact/form2/style.sass
@@ -29,7 +29,7 @@
                 position: relative
                 background-image: url('../images/icons/select.png')
                 background-repeat: no-repeat
-                background-position: 14px
+                background-position: 14px !important
                 border: none
                 &:focus
                     outline: none
